--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,15 +14,25 @@ layout: table_wrappers
     {% include components/header.html %}
     <div id="main-content-wrap" class="main-content-wrap">
       {% include components/breadcrumbs.html %}
+
+      <h1 style="font-weight: bold;">{{ page.title }}</h1>
+
+      {% if page.has_children == true and page.has_toc != false %}
+      {% include components/children_nav.html toc_list=toc_list %}
+      {% endif %}
+
+      {% if content contains "<h2>" or content contains "<h3>" or content contains "<h4>" %}
+        <!-- Table of Contents Heading -->
+        <h2>Table of Contents</h2>
+        <!-- Table of Contents -->
+        {% include toc.html html=content %}
+      {% endif %}
+
       <div id="main-content" class="main-content" role="main">
         {% if site.heading_anchors != false %}
           {% include vendor/anchor_headings.html html=content beforeHeading="true" anchorBody="<svg viewBox=\"0 0 16 16\" aria-hidden=\"true\"><use xlink:href=\"#svg-link\"></use></svg>" anchorClass="anchor-heading" anchorAttrs="aria-labelledby=\"%html_id%\"" %}
         {% else %}
           {{ content }}
-        {% endif %}
-
-        {% if page.has_children == true and page.has_toc != false %}
-          {% include components/children_nav.html toc_list=toc_list %}
         {% endif %}
 
         {% include components/footer.html %}
